--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="script.js"></script>
+  <script>window.onload = function() {
+    // similar behavior as clicking on a link
+    window.location.href = "tjschool.github.io/Glossary-Maker";
+}</script>
 </head>
 <body>
 <div id="content">
