--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     // similar behavior as clicking on a link
     window.location.href = "tjschool.github.io/Glossary-Maker";
 }</script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6936464293145231"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <button onclick="window.location.href = "tjschool.github.io/Glossary-Maker";" id="dabut">Click Me!</button>
